# evaluate-mathematical-expression

./: CMakeLists.txt  README.md  main.cpp
lib/: calc.hpp
lib/eme/: a_binary_operator.cpp  a_binary_operator.h  a_expression.cpp  a_expression.h  a_operator.cpp  a_operator.h  a_unary_operator.cpp  a_unary_operator.h  addition.cpp  addition.h  calculator.cpp  calculator.h  divide.cpp  divide.h  empty.cpp  empty.h  i_expression.cpp  i_expression.h  mathematical_expression.cpp  mathematical_expression.h  multiply.cpp  multiply.h  negative.cpp  negative.h  number.cpp  number.h  scope.cpp  scope.h  subtract.cpp  subtract.h  symbol.cpp  symbol.h  symbol_sequence.cpp  symbol_sequence.h  token.cpp  token.h  token_sequence.cpp  token_sequence.h
lib/eme/symbol/: symbol.cpp  symbol.h  symbol_sequence.h
tests/: CMakeLists.txt  calc.cpp
